Deploy docs from 5f9e70f2aa6283d22a90c85868c6cf227d726647
Amit: Updated homepage

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <title>Lychee Studio</title>
   <link rel="stylesheet" href="https://www.lycheestudio.com/assets/stylesheets/main.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
   
     
@@ -16,8 +19,10 @@
 <body>
   <div class="content">
   <div class="h-screen text-center bg-white p-10">
-  <h1 class="text-4xl mt-10">Lychee Studio</h1>
-  <img src="/assets/images/lychees.webp" />
+  <h1 class="text-6xl mt-10 indie-flower-regular">Lychee Studio</h1>
+  <div class="flex justify-center">
+    <img src="/assets/images/lychees.jpg" class="absolute bottom-0 mx-auto" />
+  </div>
 </div>
 
 </div>
