--- a/privacy/index.html
+++ b/privacy/index.html
@@ -6,6 +6,9 @@
 
   <title>Privacy policy</title>
   <link rel="stylesheet" href="https://www.lycheestudio.com/assets/stylesheets/main.css"/>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
   
     
