Deploy docs from 940024daeb96ea3245d3ddcda6cae72c10575dab
Amit: Added favicon

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
   <link rel="alternate" hreflang="en" href="https://www.lycheestudio.com/" />
     
   
+
+  <link rel="apple-touch-icon" href="https://www.lycheestudio.com/assets/favicons/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="https://www.lycheestudio.com/assets/favicons/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="https://www.lycheestudio.com/assets/favicons/android-chrome-512x512.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="https://www.lycheestudio.com/assets/favicons/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="https://www.lycheestudio.com/assets/favicons/favicon-16x16.png" />
+  <link rel="icon" href="https://www.lycheestudio.com/assets/favicons/favicon.ico" />
+  <meta name="msapplication-TileColor" content="#FFFFF4" />
+  <meta name="msapplication-TileImage" content="https://www.lycheestudio.com/assets/favicons/android-chrome-192x192.png" />
 </head>
 <body>
   <div class="content">
