Deploy docs from f99d2856a49f7dd6efe964d0639cc9fffb0186cd
Amit: Added links

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
   <div class="content">
   <div class="h-screen text-center bg-white p-10">
   <h1 class="text-6xl mt-10 indie-flower-regular">Lychee Studio</h1>
+  <div class="my-4 text-lg indie-flower-regular">
+    <a class="cursor-pointer hover:underline" href="mailto:contact@lycheestudio.com">CONTACT</a>
+    <span class="mx-4">|</span>
+    <a class="cursor-pointer hover:underline" href="/privacy">PRIVACY</a>
+  </div>
   <div class="flex justify-center">
     <img src="/assets/images/lychees.jpg" class="absolute bottom-0 mx-auto" />
   </div>
